wiki+harness: build-your-own Java deser gadget recipe + VM provisioning
From the ironhold box (Spring Boot commons-collections 3.2.1 deser RCE, flag4).
The deser step cost the most time: no ysoserial on the VM, jitpack build download
returned an empty stub, no javac, then JDK-21 generation gotchas rediscovered live.

- wiki/payloads/deserialization.md (leak-gated): new "Build the gadget yourself"
  section - Maven-Central gadget lib + a copy-paste CommonsCollections6 generator,
  and the modern-JDK gotchas: class-version mismatch -> --release; module access
  -> --add-opens; CC5's String-typed BadAttributeValueExpException.val on JDK 21
  -> use CC6; blind-sink OOB exfil via callback.
- hunt-deserialization: "no ysoserial jar?" fallback pointing to that recipe.
- vm-provision.sh: seed a JDK (guarantees javac to build gadgets) + a best-effort
  ysoserial.jar in /opt/arsenal, with a wiki pointer on miss.